--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Fri Aug 06 16:33:07 EDT 2010
+#Sun Aug 08 17:03:46 EDT 2010
 eclipse.preferences.version=1
 encoding//pages/managers.py=utf-8
 encoding//pages/settings.py=utf-8
+encoding//pages/templatetags/pages_tags.py=utf-8
